@@ -13,6 +13,7 @@
 #include <QSplitter>
 #include <QStringList>
 
+#include "icons.h"
 #include "filedialog.h"
 #include "../globals.h"
 
@@ -172,9 +173,9 @@ MFileDialog::MFileDialog(const QString& dir,
 
 	    // Qt >= 4.6 allows us to select icons from the theme
 #if QT_VERSION >= 0x040600
-            buttons.globalButton->setIcon(QIcon::fromTheme("folder", style()->standardIcon(QStyle::SP_DirIcon)));
-            buttons.userButton->setIcon(QIcon::fromTheme("user-home", style()->standardIcon(QStyle::SP_DirHomeIcon)));
-            buttons.projectButton->setIcon(QIcon::fromTheme("folder-sound", style()->standardIcon(QStyle::SP_DirOpenIcon)));
+            buttons.globalButton->setIcon(*globalIcon);
+            buttons.userButton->setIcon(*userIcon);
+            buttons.projectButton->setIcon(*projectIcon);
 #else
             buttons.globalButton->setIcon(style()->standardIcon(QStyle::SP_DirIcon));
             buttons.userButton->setIcon(style()->standardIcon(QStyle::SP_DirHomeIcon));
